reinit using visual studio

--- a/WorkingWithCollections/Collections/Collections.csproj
+++ b/WorkingWithCollections/Collections/Collections.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Bike.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Pracownik.cs" />
+    <Compile Include="Osoba.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
